--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,12 +1,16 @@
 @import "~bulma/sass/utilities/initial-variables"
 
-// Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+@font-face
+  font-family: "Conthrax";
+  src: url("../../static/conthrax/Conthrax.woff") format("woff");
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+// Config vars
+// Taylored Audio logo brand color: #FD461E
+$TayloredAudio-green: #000000
+$TayloredAudio-green-invert: #fff
+
+$primary: $TayloredAudio-green
+$primary-invert: $TayloredAudio-green-invert
 $body-color: #333
 $black: #2b2523
 
@@ -85,13 +89,13 @@ footer.footer
   background-color: transparent
 
 //Menu overrides
-$menu-item-color: $white-ter
+$menu-item-color: $black
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
-$menu-label-color: $white-ter
+$menu-item-active-color: $TayloredAudio-green-invert
+$menu-item-active-background-color:	$TayloredAudio-green-invert
+$menu-list-border-left: 1px solid $TayloredAudio-green-invert
+$menu-label-color: $black
 
 
 .menu-label
@@ -122,6 +126,14 @@ $menu-label-color: $white-ter
   flex-basis: 35%;
   margin: 0 1.5em 0 0;
 
+// testimonial rolls
+.author-profile-picture
+  width: 4em
+  height: 4em
+  right: .5em
+  top: .5em
+  position: absolute
+
 
 @import "~bulma"
 
@@ -138,3 +150,16 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+
+.gallery-thumbnail
+  max-height: fit-content;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+.content h1,
+.content h2,
+.content h3,
+.content h4,
+.title
+  font-family: "Conthrax";
